# quartile-solver

./: .gitignore  Cargo.toml  README.md  filter.py  words-reject.txt
src/: main.rs
